# cpi

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
examples/: README.md  open-session.ts
programs/mppsol-cpi/: Cargo.toml
programs/mppsol-cpi/src/: lib.rs
programs/mppsol-session/: Cargo.toml
programs/mppsol-session/src/: lib.rs
programs/test-consumer/: Cargo.toml
programs/test-consumer/src/: lib.rs
tests/: cpi.test.ts  session.test.ts  test-utils.ts
