[package]
name = "mppsol-session"
version = "0.1.0-draft.1"
description = "MPP.sol on-chain session program: PDA-managed escrow + off-chain debit settlement"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mppsol_session"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
