[package]
name = "test-consumer"
version = "0.1.0-draft.1"
description = "Test-only companion program for exercising mppsol_cpi::verify_paid_result via CPI."
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_consumer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "mppsol-cpi/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
mppsol-cpi = { path = "../mppsol-cpi", features = ["cpi"] }
